--- a/public/index.html
+++ b/public/index.html
@@ -28,7 +28,9 @@
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
-    <div id="root" style='height: 100%' ></div>
+    <div id="root" style='height: 100%'></div>
+    <script src="bundle.js"></script>
+    <script src="https://cdn.freecodecamp.org/testable-projects-fcc/v1/bundle.js"></script>  
     <!--
       This HTML file is a template.
       If you open it directly in the browser, you will see an empty page.
